@@ -1034,6 +1034,10 @@ body{
 	color:#e4d529;
 }
 
+.purple{
+	color:#ac88ff;
+}
+
 .bold{
 	font-weight:bold;
 	color:#dddddd;
